[package]
name = "argon2cf"
version = "0.1.0"
edition = "2021"

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
argon2 = "0.5.3"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2.15", features = ["js"] }
rand_core = { version = "0.6.4", features = ["std"] }
worker = "0.4.2"
